name:                b-haskell
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/easimonenko/b-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Evgeniy A. Simonenko
maintainer:          easimonenko@mail.ru
copyright:           2016 Evgeniy A. Simonenko
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable b-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
